<resources>
    <string name="app_name">FoodieNest</string>
    <!-- Settings Activity Strings -->
    <string name="settings">Settings</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="data_management">Data Management</string>
    <string name="reset_all_favorites">Reset All Favorites</string>
    <string name="about">About</string>
    <string name="about_app">About App</string>

    <string name="app_logo">Restaurant App Logo</string>
    <string name="explore">EXPLORE</string>

    <!-- Menu Titles -->
    <string name="food_menu">Food Menu</string>
    <string name="drink_menu">Drink Menu</string>

    <!-- Dialog Strings -->
    <string name="reset_data_title">Reset Data</string>
    <string name="reset_data_message">Are you sure you want to reset all favorite data? This action cannot be undone.</string>
    <string name="reset_data_success">All favorite data has been reset</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="about_title">About Restaurant App</string>
    <string name="about_message">Restaurant App\nVersion 1.0\n\nAn application to find and save your favorite restaurants from Dicoding\'s API</string>

    <string name="no_favorites">No favorite restaurant yet</string>
    <string name="home">home</string>
    <string name="favorites">favorite</string>
    <string name="search">Lets find restaurant..</string>
    <string name="restaurant_image">Restaurant Image</string>
</resources>